# metallic

./: Cargo.toml  README.md
.cargo/: config
src/: _interrupts.rs  alloc_sample.txt  allocator.rs  instincts.txt  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
