[package]
name = "metallic"
version = "0.1.0"
authors = ["feminstincts <feminstincts@gmail.com>"]
edition = "2018"

[dependencies]
# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic